k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-core
  namespace: app
  labels:
    app: api-core
  annotations:
    cloud.google.com/backend-config: '{"default": "api-backend-config"}'
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: api-core
